[package]
name = "boss-assets"
description = "Serial-numbered physical devices + append-only event log per device"
version.workspace = true
edition.workspace = true

[[bin]]
name = "boss-assets-api"
path = "src/bin/boss_assets_api.rs"

[features]
default = []
postgres = ["dep:sqlx", "boss-events/postgres", "dep:boss-subject-kinds"]

[dependencies]
boss-subject-kinds = { path = "../../core/boss-subject-kinds", features = ["postgres"], optional = true }
boss-policy = { path = "../../core/boss-policy" }
boss-policy-client = { path = "../../core/boss-policy-client" }
boss-classes-client = { path = "../../core/boss-classes-client" }
boss-clock-client = { path = "../../core/boss-clock-client" }
boss-ports = { path = "../../core/boss-ports" }
boss-core = { path = "../../core/boss-core" }
boss-events = { path = "../../core/boss-events" }
boss-nats = { path = "../../core/boss-nats" }
boss-people-client = { path = "../boss-people-client" }
boss-catalog-client = { path = "../boss-catalog-client" }
boss-jobs-client = { path = "../../core/boss-jobs-client" }
boss-inventory-client = { path = "../boss-inventory-client" }
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
axum = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
async-nats = { workspace = true }
sqlx = { version = "0.8", default-features = false, features = ["macros", "runtime-tokio", "postgres", "chrono", "json"], optional = true }

[dev-dependencies]
boss-testing = { path = "../../core/boss-testing", features = ["postgres"] }
tower = { workspace = true }
http-body-util = "0.1"
proptest = "1"
sqlx = { version = "0.8", default-features = false, features = ["macros", "runtime-tokio", "postgres", "chrono", "json"] }

[lints]
workspace = true
